# slayer-dsbench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: latex.yml  ledger.yml  validate.yml
datasets/manifest-example/: card.yaml  sample.jsonl  sources.yaml
datasets/mcq-example/: card.yaml  sample.jsonl
datasets/polish-dynaword/: NOTICE.md  card.yaml  sample.jsonl  sources.yaml
datasets/sejm/: card.yaml  sample.jsonl
datasets/speakleash/: card.yaml  sample.jsonl  sources.yaml
datasets/style-md-example/: card.md  sample.jsonl
datasets/style-sft-example/: card.yaml  sample.jsonl
docs/: INDEX.md
docs/00-Cele/: C1-Zywy-Audyt-Licencyjny-Speakleash.md
docs/10-Tezy/: T1-Manifest-Per-Zrodlo-Wystarcza.md
docs/15-Antytezy/: AT1-Manifest-To-Za-Malo.md
docs/20-Decyzje/: D1-Spdx-Unknown-To-Warn.md  D2-Port-Bramki-Bartka-Odlozony.md  D3-Fixture-Syntetyczny-Nie-Verbatim.md  D4-Karta-Bez-Records-Sha256.md
docs/25-Syntezy/: S1-Dwupoziomowa-Bramka-Plus-Pii.md
docs/60-Reference/: R1-Inwentarz-Danych-Speakleash.md
docs/90-Ewaluacja/: Stan.md
dsbench/: __init__.py  cli.py  engine.py  models.py  registry.py  schema.py  textextract.py
dsbench/checks/: __init__.py  decontam.py  dedup.py  empty.py  integrity.py  license.py  pii.py  stats.py  uniqueid.py
eval_sets/: hashes.txt
formats/: mcq.yaml  style-sft.yaml  v1.yaml  v2.yaml
paper/formatka/: slayer.sty
paper/tresc/: 00-strona-tytulowa.tex  10-tresc.tex
scripts/: generate-ledger.py  lint-math-unicode.py
tests/: test_dsbench.py
