[project]
name = "slayer-dsbench"
version = "0.1.0"
description = "Bramka CI + formatka do walidacji datasetów (schema-agnostyczna)"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6"]

[project.scripts]
dsbench = "dsbench.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dsbench", "dsbench.checks"]
